--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-results",
   "version": "0.1.0",
   "description": "A result wrapper based on the Rust `Result` enum",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
     "jest": "^26.6.3",
@@ -11,5 +11,8 @@
   "scripts": {
     "test": "jest",
     "build": "tsc"
-  }
+  },
+  "repository": "git@github.com:DukeFerdinand/ts-results.git",
+  "author": "Doug Flynn <DougFlynnDevelopment@gmail.com>",
+  "private": false
 }
