--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-results",
+  "name": "@dukeferdinand/ts-results",
   "version": "0.1.0",
   "description": "A result wrapper based on the Rust `Result` enum",
   "main": "dist/index.js",
